==================================================================================================
Changes for 2.10
==================================================================================================
- Added multi-page listing capabilities for SDF table reporting. Presently a work in progress.
- Added multi-page listing capabilities for unconnected EDCU channels. Presently, still a work
  in progress.
- Added a new install script, nort- (No real-time). This was added to properly generate
  the start script for EDCU models, which have no real-time component.
- Added a compile option (DUAL_DAQ_DC) for running with 2 data concentrators. Until I think of
  a better solution, this is 'hardwired' in feCodeGen.pl by setting daq2dc = 1. If it is desired
  to run with a single data concentrator, set this to daq2dc = 0 for now.
- mx_stream modified to provide additional diagnostics when used in a system with 2 DAQ data
  concentrators.
==================================================================================================
Changes for 2.9.1
==================================================================================================
- Bug Fix (803): Modified Makefile.linux to not add SDF EPICS variables to the autoBurt.req file.
- Bug Fix (790): Added difference calc and EPICS records to provide diff between present setpoint
  and BURT request as added feature to SDF. As part of this fix, also:
          - Changed the way filter switch setting errors are reported.
                  - Old: FILTER_NAME_SW1S         Hex of BURT set         Hex of Present set
                  - New: FILTER_NAME [ERRANT SWITCH NAME]         BURT ON/OFF     PRESENT ON/OFF
          - Increased display precision to BURT/PRESENT value fields on DIFF Display.
- Bug Fix (802): Changed SDF reporting records from string type to waveform type to allow >40
  character strings to be reported to SDF MEDM screens.